--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "colors": "^1.1.2",
     "lodash": "^4.17.5",
     "mocha": "^5.0.0",
-    "mongodb": "^3.0.2"
+    "mongodb": "^3.0.2",
+    "sinon": "^4.3.0"
   }
 }
